Misc cleanup.